--- a/src/main/resources/public/static/styles.css
+++ b/src/main/resources/public/static/styles.css
@@ -15,3 +15,22 @@
     
     
 }
+
+
+.search-result {
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+.search-result h2 {
+    margin-top: 0;
+}
+.search-result p {
+    margin-bottom: 5px;
+}
+.search-result a {
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+}
